logs/dag_id=testing_dag/run_id=manual__2024-06-19T163252.077240+0000/task_id=load_data/attempt=2.log
[2024-06-19T16:38:43.758+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-06-19T16:38:43.787+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: testing_dag.load_data manual__2024-06-19T16:32:52.077240+00:00 [queued]>
[2024-06-19T16:38:43.795+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: testing_dag.load_data manual__2024-06-19T16:32:52.077240+00:00 [queued]>
[2024-06-19T16:38:43.796+0000] {taskinstance.py:2306} INFO - Starting attempt 2 of 2
[2024-06-19T16:38:43.807+0000] {taskinstance.py:2330} INFO - Executing <Task(SQLExecuteQueryOperator): load_data> on 2024-06-19 16:32:52.077240+00:00
[2024-06-19T16:38:43.822+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=2169) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-06-19T16:38:43.824+0000] {standard_task_runner.py:63} INFO - Started process 2171 to run task
[2024-06-19T16:38:43.824+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'testing_dag', 'load_data', 'manual__2024-06-19T16:32:52.077240+00:00', '--job-id', '77', '--raw', '--subdir', 'DAGS_FOLDER/main_dag.py', '--cfg-path', '/tmp/tmp5ihdlq1j']
[2024-06-19T16:38:43.825+0000] {standard_task_runner.py:91} INFO - Job 77: Subtask load_data
[2024-06-19T16:38:43.900+0000] {task_command.py:426} INFO - Running <TaskInstance: testing_dag.load_data manual__2024-06-19T16:32:52.077240+00:00 [running]> on host 80ed35ae19d6
[2024-06-19T16:38:44.003+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_EMAIL='***@example.com' AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='testing_dag' AIRFLOW_CTX_TASK_ID='load_data' AIRFLOW_CTX_EXECUTION_DATE='2024-06-19T16:32:52.077240+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-06-19T16:32:52.077240+00:00'
[2024-06-19T16:38:44.005+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-06-19T16:38:44.005+0000] {sql.py:276} INFO - Executing: BEGIN TRANSACTION;
COPY raw_external_fund(
	"financial_type"
	"symbol"	,
	"security_name"	,
	"sedol"	,
	"price"	,
    "quantity"	,
	"realised_pl"	,
    "market_value"	,
	"fund_name"	,
	"date"	,
	"hash_uid"	,
    "isin" ) FROM '/opt/data/output/landing_file.csv' WITH (FORMAT CSV);
COMMIT;
[2024-06-19T16:38:44.017+0000] {base.py:84} INFO - Using connection ID 'postgres_***' for task execution.
[2024-06-19T16:38:44.032+0000] {base.py:84} INFO - Using connection ID 'postgres_***' for task execution.
[2024-06-19T16:38:44.127+0000] {sql.py:487} INFO - Running statement: BEGIN TRANSACTION;
COPY raw_external_fund(
	"financial_type"
	"symbol"	,
	"security_name"	,
	"sedol"	,
	"price"	,
    "quantity"	,
	"realised_pl"	,
    "market_value"	,
	"fund_name"	,
	"date"	,
	"hash_uid"	,
    "isin" ) FROM '/opt/data/output/landing_file.csv' WITH (FORMAT CSV);
COMMIT;, parameters: None
[2024-06-19T16:38:44.135+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-06-19T16:38:44.136+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ""symbol""
LINE 4:  "symbol" ,
         ^

[2024-06-19T16:38:44.154+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=testing_dag, task_id=load_data, run_id=manual__2024-06-19T16:32:52.077240+00:00, execution_date=20240619T163252, start_date=20240619T163843, end_date=20240619T163844
[2024-06-19T16:38:44.172+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 77 for task load_data (syntax error at or near ""symbol""
LINE 4:  "symbol" ,
         ^
; 2171)
[2024-06-19T16:38:44.199+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-06-19T16:38:44.216+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-06-19T16:38:44.218+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
